avoid unneeded line spacing for non-p body elements

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,12 +63,9 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
 }
 
-body, p {
+p {
   font-family: 'Bitter';
   line-height: 200%;
-}
-
-p {
   width: 700px;
 }
 
